[package]
name = "live-ascii"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
image = "0.25.10"
libc = "0.2"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
glam = "0.32.1"
icy_sixel = "0.5"
quantette = "0.5"
kitty-graphics-protocol = "0.1"
bytemuck = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

[features] 
default = ["debug"]
debug = ["tracker_debug"]
tracker_debug = []

[profile.release]
debug = true

[dev-dependencies]
vtubestudio = "0.9"
